--- a/firstformat.html
+++ b/firstformat.html
@@ -1,3 +1,5 @@
+
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -234,25 +236,30 @@
 
     <script>
         // Store the original template
-        const originalTemplate = `Hello! Mr firstname surname, Peace be unto you and blessings of God.
+        const originalTemplate = `Hello! Mr firstname surname, peace be unto you and blessings of God.
 
-I am AUDIT_MANAGER_NAME, from Canada. I lived in 49 Halfmoon Sq, Toronto, Ontario M1C 3V4. I am a Bank Officer here in BANK_NAME. Firstly, I want you to know that I’m pleased to connect with you here and truly appreciate your openness. I assure you, you won’t regret this. I believe it is the wish of God for me to come across you in this very short time as I am having an important and urgent business discussion I wish to share with you which I believe will interest and benefit you because it is in connection with your surname name and nationality and you are going to benefit from it.
+I am AUDIT_MANAGER_NAME, from Canada. I live at 49 Halfmoon Sq, Toronto, Ontario, M1C 3V4. I am a Bank Officer here at BANK_NAME. Firstly, I want you to know that I’m pleased to connect with you here and truly appreciate your openness. I assure you, you won’t regret this. I believe it is the wish of God that I came across you in this very short time, as I have an important and urgent business matter I wish to share with you—one that I believe will interest and benefit you, as it is connected with your surname and nationality. You are going to benefit from it.
 
-I am writing to you concerning a man/citizen from your country DECEASED_PERSON_NAME surname who was a business Assistance of Getchell Gold Corp. Getchell Gold is a private company. On the 2nd of February 2015 DECEASED_PERSON_NAME surname, opened a Fixed deposit private account in our bank the BANK_NAME, and deposited the sum of $ Amount (amount written in words goes here ) into the account for the purpose of opening a car manufacturing company there in your country.
+I am writing to you concerning a man from your country, DECEASED_PERSON_NAME surname, who was a business associate of Getchell Gold Corp. Getchell Gold is a private company. On the 2nd of February 2015, DECEASED_PERSON_NAME surname opened a fixed deposit private account in our bank, BANK_NAME, and deposited the sum of $ Amount (amount written in words goes here) into the account for the purpose of opening a car manufacturing company in your country.
 
-But as a great BUSINESS_TITLE and constant/regular traveller, it was very unfortunate that DECEASED_PERSON_NAME was among the dead victims of the (COVID-19)  Coronavirus disease, PRONOUN died on 19th of January 2020. So the main reason I am telling you is that. Late DECEASED_PERSON_NAME did not mention any next of kin/heir when PRONOUN opened the fixed deposit private account and deposited the money.  PRONOUN was a WIDOW_STATUS, married to the late wife and they didn't have any kids and PRONOUN did not mention any relatives' names. My bank board management team don't have any information about this yet, they don't know about the account and DECEASED_PERSON_NAME surname's death, the only reason I knew about this because i am the Audit Manager, and i review an Exercise of All the accounts of the bank and any transaction of such must be confirmed by me to be completed and also the awareness of the manager of the bank. So, as I am writing to you now, the only people who know about this are you, and me, and the transaction will be carried out successfully between the two of us.
+But as a respected BUSINESS_TITLE and frequent traveller, it was very unfortunate that DECEASED_PERSON_NAME was among the victims of the Coronavirus (COVID-19) disease. PRONOUN died on the 19th of January 2020. The main reason I am telling you this is because the late DECEASED_PERSON_NAME did not mention any next of kin or heir when PRONOUN opened the fixed deposit account and deposited the money. PRONOUN was WIDOW_STATUS, married to the late wife, and they didn't have any children. PRONOUN also did not mention any relatives.
 
-Last week my Bank Management had a meeting for a bank verification exercise to note dormant and private deposit accounts. I knew this would happen and that is why I have been looking for a means to handle the situation before my bank board management team finds out about it because if they find out they will request for the money to be shared among them which I can reject and I don't want such to happen.  That was why when I saw your details, I was happy.
+My bank's board and management team are not aware of this account or of DECEASED_PERSON_NAME surname's death. The only reason I know about it is because I am the Audit Manager, and I reviewed this during an audit exercise of all the accounts in the bank. Any transaction of this nature must be confirmed by me to be completed and brought to the awareness of the Bank Manager. So, as I write to you now, the only people who know about this are you and me, and the transaction can be carried out successfully between us.
 
-I'm now seeking your cooperation to present you as Next of Kin/Heir to the account since you have the same last name and same nationality as DECEASED_PERSON_NAME, and my bank headquarters will release the account to you through my Authority and that of the Manager of the bank. There is no risk involved. Do not be afraid I give my 100% trust; the transaction will be executed under a legitimate arrangement, that will protect you from any breach of any rule defining correct procedure or behavior in this transaction.. It is better that we claim the money than allowing the Bank Directors to share it among themselves.
+Last week, my bank's management held a meeting for a bank verification exercise to identify dormant and private deposit accounts. I knew this would happen, which is why I’ve been looking for a way to handle the situation before the board finds out—because if they do, they will request the money be shared among themselves, which I cannot accept. I do not want that to happen. That is why, when I saw your details, I was happy.
 
-I am not a greedy person, so I am suggesting we share the funds, 50%/50% which is 50% for you, 50% for me, since you are the one to receive the money in your country. I hope the sharing is a farewell Agreement and my own share of the money will assist me to start my new project and help the Orphanage home. Let me know your opinion on this and please do treat this information as confidential. I shall give you more details once I receive your urgent response through my official email address below
+I’m now seeking your cooperation to present you as the next of kin/heir to the account, since you share the same last name and nationality as DECEASED_PERSON_NAME. My bank headquarters will release the account to you under my authority and that of the Bank Manager. There is no risk involved—please do not be afraid. I give you my 100% trust. The transaction will be executed under a legitimate arrangement that will protect you from any breach of procedure or laws.
 
-My whatsApp: phone number if provided
+It is better that we claim the money than allow the bank directors to share it among themselves.
 
+I am not a greedy person, so I am proposing we share the funds 50%/50%—that is, 50% for you and 50% for me—since you are the one who will receive the money in your country. I hope this sharing is a fair agreement, and my portion of the money will help me start a new project and support an orphanage home.
+
+Please let me know your opinion on this, and treat this information as confidential. I shall give you more details once I receive your urgent response through my official email address below.
+
+My WhatsApp: phone number if provided
 My email address: email goes here
 
-Best Regards;
+Best Regards,
 AUDIT_MANAGER_NAME`;
 
         // Function to save form data to localStorage
