--- a/firstformat.html
+++ b/firstformat.html
@@ -238,23 +238,23 @@
         // Store the original template
         const originalTemplate = `Hello! Mr firstname surname, peace be unto you and blessings of God.
 
-I am AUDIT_MANAGER_NAME, from Canada. I live at 49 Halfmoon Sq, Toronto, Ontario, M1C 3V4. I am a Bank Officer here at BANK_NAME. Firstly, I want you to know that I’m pleased to connect with you here and truly appreciate your openness. I assure you, you won’t regret this. I believe it is the wish of God that I came across you in this very short time, as I have an important and urgent business matter I wish to share with you—one that I believe will interest and benefit you, as it is connected with your surname and nationality. You are going to benefit from it.
+I am AUDIT_MANAGER_NAME, from Canada. I live at 49 Halfmoon Sq, Toronto, Ontario, M1C 3V4. I am a Bank Officer here at BANK_NAME. Firstly, I want you to know that I’m pleased to connect with you here and truly appreciate your openness. I assure you, you won’t regret this. I believe it is the wish of God that I came across you in this very short time, as I have an important and urgent business matter I wish to share with you—one that I believe will interest and benefit you, as it is connected with your surname last name and nationality. You are going to benefit from it.
 
 I am writing to you concerning a man from your country, DECEASED_PERSON_NAME surname, who was a business associate of Getchell Gold Corp. Getchell Gold is a private company. On the 2nd of February 2015, DECEASED_PERSON_NAME surname opened a fixed deposit private account in our bank, BANK_NAME, and deposited the sum of $ Amount (amount written in words goes here) into the account for the purpose of opening a car manufacturing company in your country.
 
-But as a respected BUSINESS_TITLE and frequent traveller, it was very unfortunate that DECEASED_PERSON_NAME was among the victims of the Coronavirus (COVID-19) disease. PRONOUN died on the 19th of January 2020. The main reason I am telling you this is because the late DECEASED_PERSON_NAME did not mention any next of kin or heir when PRONOUN opened the fixed deposit account and deposited the money. PRONOUN was WIDOW_STATUS, married to the late wife, and they didn't have any children. PRONOUN also did not mention any relatives.
+But as a respected BUSINESS_TITLE and frequent traveller, it was very unfortunate that DECEASED_PERSON_NAME surname was among the victims of the Coronavirus (COVID-19) disease. PRONOUN died on the 19th of January 2020. The main reason I am telling you this is because the late DECEASED_PERSON_NAME surname did not mention any next of kin or heir when PRONOUN opened the fixed deposit account and deposited the money. PRONOUN was WIDOW_STATUS, married to the late wife, and they didn't have any children. PRONOUN also did not mention any relatives.
 
 My bank's board and management team are not aware of this account or of DECEASED_PERSON_NAME surname's death. The only reason I know about it is because I am the Audit Manager, and I reviewed this during an audit exercise of all the accounts in the bank. Any transaction of this nature must be confirmed by me to be completed and brought to the awareness of the Bank Manager. So, as I write to you now, the only people who know about this are you and me, and the transaction can be carried out successfully between us.
 
 Last week, my bank's management held a meeting for a bank verification exercise to identify dormant and private deposit accounts. I knew this would happen, which is why I’ve been looking for a way to handle the situation before the board finds out—because if they do, they will request the money be shared among themselves, which I cannot accept. I do not want that to happen. That is why, when I saw your details, I was happy.
 
-I’m now seeking your cooperation to present you as the next of kin/heir to the account, since you share the same last name and nationality as DECEASED_PERSON_NAME. My bank headquarters will release the account to you under my authority and that of the Bank Manager. There is no risk involved—please do not be afraid. I give you my 100% trust. The transaction will be executed under a legitimate arrangement that will protect you from any breach of procedure or laws.
+I’m now seeking your cooperation to present you as the next of kin/heir to the account, since you share the same last name and nationality as DECEASED_PERSON_NAME surname. My bank headquarters will release the account to you under my authority and that of the Bank Manager. There is no risk involved—please do not be afraid. I give you my 100% trust. The transaction will be executed under a legitimate arrangement that will protect you from any breach of procedure or laws.
 
 It is better that we claim the money than allow the bank directors to share it among themselves.
 
 I am not a greedy person, so I am proposing we share the funds 50%/50%—that is, 50% for you and 50% for me—since you are the one who will receive the money in your country. I hope this sharing is a fair agreement, and my portion of the money will help me start a new project and support an orphanage home.
 
-Please let me know your opinion on this, and treat this information as confidential. I shall give you more details once I receive your urgent response through my official email address below.
+Please treat this information as strictly confidential. If you are willing to proceed, reply urgently through my official email, and I will provide further details.
 
 My WhatsApp: phone number if provided
 My email address: email goes here
